# SAE

./: .gitignore  .gitmodules  Context.md  README.md  a.py  download_sae.py  pyproject.toml  run_sae.slurm  sae_shared.py  saev5.py  test_chargement_sae.py
.github/agents/: ml-engineer-cpu-test.agent.md
src/analysis/: metrics.py
src/data/: keywords.py  preparation.py
src/sae/: __init__.py  batch.py  frozen_core.py  gemma_scope_loader.py  judge.py  phrase_sae.py
src/storage/: shards.py
tests/: test_bfloat16.py  test_checkpoint.py  test_frozen_core.py  test_interp_embed_diff.py  test_pooling.py  test_retrieval.py  test_sparse_storage.py
