[project]
name = "sae"
version = "0.2.0"
description = "Sparse Autoencoders for Interpretable Text Analysis - Two-pipeline system for feature interpretation via SAE decomposition"
readme = "README.md"
requires-python = "==3.12.*"
authors = [{name = "Research Team"}]
dependencies = [
    "datasets>=2.21.0",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "pandas<3.0.0",
    "pytest>=9.1.1",
    "sae-lens>=6.0.0",
    "torch>=2.6.0",
    "transformer-lens>=1.19.0",
    "transformers>=4.57.6",
    "typeguard>=4.5.1",
    "umap-learn>=0.5.12",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu124", marker = "platform_system != 'Darwin'"},
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv]
environments = ["sys_platform == 'linux' and python_version == '3.12'"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = [
    "external",
    "node_modules",
    ".git",
    ".venv",
    "*.egg-info"
]
